[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Player/Scripts/Inputs.gd" type="Script" id=2]
[ext_resource path="res://Player/player_sprite.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.0001, 9.80185 )

[sub_resource type="Animation" id=2]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/path = NodePath("player_sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Inputs" type="Node" parent="."]
script = ExtResource( 2 )

[node name="player_sprite" parent="." instance=ExtResource( 3 )]
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.21912, 2.7739 )
shape = SubResource( 1 )

[node name="Shoot_pos" type="Node2D" parent="."]
position = Vector2( 15.454, 1.71711 )

[node name="Shoot_pos2" type="Node2D" parent="."]
position = Vector2( -2.36103, -9.44411 )

[node name="Shoot_pos3" type="Node2D" parent="."]
position = Vector2( -3.43422, 15.6686 )

[node name="shoot_cooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 2 )
[connection signal="shoot" from="Inputs" to="." method="_on_Inputs_shoot"]
[connection signal="stopshooting" from="Inputs" to="." method="_on_Inputs_stopshooting"]
